{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 81,
  "lineage": "da8ba99d-456c-10ea-469a-58099a08440f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00623879eca67b6b8",
            "public_dns": "ec2-54-157-10-243.compute-1.amazonaws.com",
            "public_ip": "54.157.10.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_eip_ngw_a",
              "Namespace": "useast1d"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06de997c4ed269fc4",
            "public_dns": "ec2-54-157-240-86.compute-1.amazonaws.com",
            "public_ip": "54.157.240.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_eip_ngw_b",
              "Namespace": "useast1d"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fded96eb4f455a7b",
            "public_dns": "ec2-3-211-118-123.compute-1.amazonaws.com",
            "public_ip": "3.211.118.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_eip_ngw_c",
              "Namespace": "useast1d"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-004efe7c24e3f6560",
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_igw",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00623879eca67b6b8",
            "id": "nat-0c2215bd095ff4a75",
            "network_interface_id": "eni-0500d7ffc0e21f4d9",
            "private_ip": "10.0.1.116",
            "public_ip": "54.157.10.243",
            "subnet_id": "subnet-08274650c7309b6d2",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_ngw_public_a",
              "Namespace": "useast1d"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06de997c4ed269fc4",
            "id": "nat-06284f30e106b707c",
            "network_interface_id": "eni-0ee04da1956554e64",
            "private_ip": "10.0.2.171",
            "public_ip": "54.157.240.86",
            "subnet_id": "subnet-07e76814f1543d4e3",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_ngw_public_b",
              "Namespace": "useast1d"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.igw",
            "aws_subnet.public_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_private_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fded96eb4f455a7b",
            "id": "nat-0e304ddc2a9c4b4bf",
            "network_interface_id": "eni-052f0b3bb13e591e6",
            "private_ip": "10.0.3.69",
            "public_ip": "3.211.118.123",
            "subnet_id": "subnet-0aafb89244145f716",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_ngw_public_c",
              "Namespace": "useast1d"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_c",
            "aws_internet_gateway.igw",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-040a1179862a38e27",
            "owner_id": "411395035331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0c2215bd095ff4a75",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_rtb_private_a",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_private_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ef24ea3a9069496b",
            "owner_id": "411395035331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-06284f30e106b707c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_rtb_private_b",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_private_b",
            "aws_subnet.public_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01109b209c5043270",
            "owner_id": "411395035331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e304ddc2a9c4b4bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_rtb_private_c",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_eip.eip_nat_c",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_private_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0515651d1201e9469",
            "owner_id": "411395035331",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004efe7c24e3f6560",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_rtb_public",
              "Namespace": "useast1d"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059d6b9ceeda01ccd",
            "route_table_id": "rtb-040a1179862a38e27",
            "subnet_id": "subnet-0164421d52b4e9b6b"
          },
          "dependencies": [
            "aws_eip.eip_nat_a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_private_a",
            "aws_route_table.rtb_private_a",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b37e3beb1d268bf",
            "route_table_id": "rtb-0ef24ea3a9069496b",
            "subnet_id": "subnet-0d225e0e0f936a33b"
          },
          "dependencies": [
            "aws_eip.eip_nat_b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_private_b",
            "aws_route_table.rtb_private_b",
            "aws_subnet.private_b",
            "aws_subnet.public_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c27a15ac6399b19",
            "route_table_id": "rtb-01109b209c5043270",
            "subnet_id": "subnet-08f87e877ece823dc"
          },
          "dependencies": [
            "aws_eip.eip_nat_c",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_private_c",
            "aws_route_table.rtb_private_c",
            "aws_subnet.private_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f2b347def7a9650",
            "route_table_id": "rtb-0515651d1201e9469",
            "subnet_id": "subnet-08274650c7309b6d2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f4329765693fd07",
            "route_table_id": "rtb-0515651d1201e9469",
            "subnet_id": "subnet-07e76814f1543d4e3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.public_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b18afdf3c70a2f79",
            "route_table_id": "rtb-0515651d1201e9469",
            "subnet_id": "subnet-0aafb89244145f716"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_office_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-0d73641d929723837",
            "description": "Allow HTTP inbound traffic from Office",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d73641d929723837",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.21.0.0/16"
                ],
                "description": "Allow HTTP inbound traffic from Office",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "useast1d_allow_office_http",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_office_http",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_office_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-022bcb9524228f9f4",
            "description": "Allow HTTPS inbound traffic from Office",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022bcb9524228f9f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.21.0.0/16"
                ],
                "description": "Allow HTTPS inbound traffic from Office",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "useast1d_allow_office_https",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_office_https",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_office_rdp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-0decf9202c70befa1",
            "description": "Allow RDP inbound traffic from Office",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0decf9202c70befa1",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.21.0.0/16"
                ],
                "description": "Allow RDP inbound traffic from Office",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "useast1d_allow_office_rdp",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_office_rdp",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_office_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-00e4846ac77e3f455",
            "description": "Allow SSH inbound traffic from Office",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e4846ac77e3f455",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.21.0.0/16"
                ],
                "description": "Allow SSH inbound traffic from Office",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "useast1d_allow_office_ssh",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_office_ssh",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_vpc_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-0bf7956f092c26456",
            "description": "Allow HTTP inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf7956f092c26456",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTP inbound traffic from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "useast1d_allow_vpc_http",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_vpc_http",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_vpc_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-03b3bacb1e99e8521",
            "description": "Allow HTTPS inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b3bacb1e99e8521",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS inbound traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "useast1d_allow_vpc_https",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_vpc_https",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_vpc_rdp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-047b75ae08110b18e",
            "description": "Allow RDP inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047b75ae08110b18e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow RDP inbound traffic from VPC",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "useast1d_allow_vpc_rdp",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_vpc_rdp",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_vpc_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:security-group/sg-08e036c842971fca0",
            "description": "Allow SSH inbound traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e036c842971fca0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow SSH inbound traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "useast1d_allow_vpc_ssh",
            "name_prefix": null,
            "owner_id": "411395035331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_allow_vpc_ssh",
              "Namespace": "useast1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-0164421d52b4e9b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0164421d52b4e9b6b",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_private_a",
              "Namespace": "useast1d",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-0d225e0e0f936a33b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0d225e0e0f936a33b",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_private_b",
              "Namespace": "useast1d",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-08f87e877ece823dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-08f87e877ece823dc",
            "map_public_ip_on_launch": false,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_private_c",
              "Namespace": "useast1d",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-08274650c7309b6d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08274650c7309b6d2",
            "map_public_ip_on_launch": true,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_public_a",
              "Namespace": "useast1d",
              "Tier": "public"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-07e76814f1543d4e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07e76814f1543d4e3",
            "map_public_ip_on_launch": true,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_public_b",
              "Namespace": "useast1d",
              "Tier": "public"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:subnet/subnet-0aafb89244145f716",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0aafb89244145f716",
            "map_public_ip_on_launch": true,
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_public_c",
              "Namespace": "useast1d",
              "Tier": "public"
            },
            "vpc_id": "vpc-0bf2700a887db25fd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411395035331:vpc/vpc-0bf2700a887db25fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0e3e547a39fc352",
            "default_route_table_id": "rtb-017ff455094a31f52",
            "default_security_group_id": "sg-0eb354e67810bd3d5",
            "dhcp_options_id": "dopt-8f56eaf5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bf2700a887db25fd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-017ff455094a31f52",
            "owner_id": "411395035331",
            "tags": {
              "Environment": "dev",
              "Name": "useast1d_vpc",
              "Namespace": "useast1d"
            }
          }
        }
      ]
    }
  ]
}